# GWAS-meta

./: .gitignore  LICENSE  README.md  REPRODUCE.md  pyproject.toml  requirements.txt  streamlit_app.py
benchmark/: preprocess_gout_inputs.py  run_benchmark.py  run_ldl_case_study.py  run_rp_case_study.py
benchmark/gout_output/: benchmark_summary.json  canonical_loci.csv  variant_accounting.csv  variant_accounting_full.csv
benchmark/ldl_case_study/: expected_loci.csv  provenance_reference.json  verify_recovery.py
benchmark/rp_case_study/: provenance_reference.json
config/: settings.yaml
src/gwas_meta/: app.py
src/gwas_meta/data/: __init__.py  build_check.py  harmonize.py  models.py  qc.py  sample_overlap.py  trait_check.py
src/gwas_meta/gwas_client/: __init__.py  ftp_client.py  models.py  rest_client.py
src/gwas_meta/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  prompts.py
src/gwas_meta/meta_analysis/: __init__.py  fixed_effects.py  heterogeneity.py  leave_one_out.py  models.py  random_effects.py
src/gwas_meta/pages/: step1_question.py  step2_criteria.py  step3_studies.py  step4_download.py  step5_meta.py  step6_results.py
src/gwas_meta/utils/: __init__.py  config.py  provenance.py
tests/test_data/: test_build_check.py  test_harmonize.py  test_sample_overlap.py
tests/test_gwas_client/: test_ftp_client.py  test_rest_client.py
tests/test_llm/: test_providers.py
tests/test_meta_analysis/: test_engine.py
tests/validation/: generate_synthetic_metafor_set.py  metafor_validate.R  run_engine_on_synthetic.py
(+6 files in other folders)
